--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.3.0",
+    "react-redux": "^8.0.2",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.0.2",
+    "redux": "3.7.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
