--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.2",
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.0.2",
     "redux": "3.7.2",
+    "redux-form": "^8.3.8",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
