--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^3.1.5",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
