--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^3.1.5",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^6.3.15",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.3.0",
@@ -18,6 +19,7 @@
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.2",
     "redux": "3.7.2",
     "redux-form": "^8.3.8",
