--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cross-fetch": "^3.1.5",
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.3.15",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^18.0.0",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.2",
