--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^3.1.5",
+    "firebase": "^9.9.3",
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.3.15",
     "prop-types": "^15.8.1",
